3回目ディスカッション追加

--- a/index.html
+++ b/index.html
@@ -130,6 +130,30 @@
         </a>
       </td>
     </tr>
+  <!---------------------03------------------------------> 
+    <tr> 
+      <td> 2019.4.18 </td> 
+      <td> discussion3</td> 
+ 	  <td> 
+ 	    <a href = "./PDF/Discussion/discussion3.pdf"> 
+ 	      <img src="./images/cmn_download_pdf.gif" height="28" border="0" alt="PDF" align="middle"/> 
+ 	    </a> 
+ 	  </td> 
+      <td> 
+        <a href = "./PPT/Discussion/discussion3_slide.pdf"> 
+          <img src="./images/cmn_download_ppt.gif" height="28" border="0" alt="PPT" align="middle"/> 
+        </a> 
+      </td> 
+	  <td><br></td> 
+	  <td> 
+	    論文調査"SoccerNet: A Scalable Dataset for Action Spotting in Soccer Videos" 
+	  </td> 
+      <td> 
+        <a href = "./Tex/DIscussion/discussion3_tex.zip"> 
+          <img src="./images/cmn_download_zip.gif" height="24" border="0" alt="zip" align="middle" /> 
+        </a> 
+      </td> 
+    </tr> 
 
   </table>
   </div>
